--- a/ui/dashboard/projects/utask-lib/src/lib/@components/task-status/task-status.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/task-status/task-status.sass
@@ -15,7 +15,7 @@ $color-primary: #007bff
   &.RUNNING
     background-color: $color-primary
     background-image: linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0, 0, 0, .1) 66%, transparent 66%)
-    background-size: 4rem 2rem, 100% 100%, 100% 100%
+    background-size: 4rem 100%, 100% 100%, 100% 100%
     animation: animate-state-running 1s linear infinite
   &.CANCELLED, &.WONTFIX
     background: $color-warning
