refactor(ui): templates & functions

--- a/ui/dashboard/src/app/@routes/stats/stats.html
+++ b/ui/dashboard/src/app/@routes/stats/stats.html
@@ -1,11 +1,12 @@
 <h2>Task states</h2>
-<div class="row">
-    <div class="col-6">
+
+<div nz-row>
+    <div nz-col nzSpan="12">
         <app-chart-task-states [data]="taskStates">
         </app-chart-task-states>
     </div>
-    <div class="col-6">
-        <table class="table">
+    <div nz-col nzSpan="12">
+        <table>
             <tr *ngFor="let state of taskStates">
                 <td [ngStyle]="{'background':state.color, 'color': 'white', 'width.px': 30}"></td>
                 <td>{{state.label}}</td>
