--- a/ui/dashboard/src/app/@routes/functions/functions.html
+++ b/ui/dashboard/src/app/@routes/functions/functions.html
@@ -1,38 +1,19 @@
-<div class="main">
-  <header>
-    <h1>Functions</h1>
-  </header>
-  <section>
-    <div class="table-responsive table-striped table-condensed">
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col" width="40px"></th>
-            <th scope="col">Name</th>
-          </tr>
-        </thead>
-        <tbody>
-
-          <ng-template ngFor let-function [ngForOf]="functions">
-            <tr (click)="display[function.name] = !display[function.name];">
-              <td>
-                <span *ngIf="!display[function.name];"><span class="fas fa-caret-down"></span></span>
-                <span *ngIf="display[function.name];"><span class="fas fa-caret-up"></span></span>
-              </td>
-              <th scope="row" class="nowrap" style="max-width: 20vw;">
-                {{function.name}}
-              </th>
+<nz-table #virtualTable [nzData]="functions" [nzFrontPagination]="false" [nzShowPagination]="false" nzSize="small" [nsAutoHeightTable]>
+    <thead>
+        <tr>
+            <th nzWidth="60px"></th>
+            <th>Name</th>
+        </tr>
+    </thead>
+    <tbody>
+        <ng-container *ngFor="let item of virtualTable.data">
+            <tr>
+                <td [nzExpand]="expandSet.has(item.name)" (nzExpandChange)="onExpandChange(item.name, $event)"></td>
+                <td>{{item.name}}</td>
             </tr>
-            <tr *ngIf="display[function.name]">
-              <td>
-              </td>
-              <td colspan="1">
-                <lib-utask-editor [value]="JSON.stringify(function, null, 4)" [config]="{readonly: true}"></lib-utask-editor>
-              </td>
+            <tr [nzExpand]="expandSet.has(item.name)">
+                <lib-utask-editor [value]="JSON.stringify(item, null, 4)" [config]="{readonly: true}"></lib-utask-editor>
             </tr>
-          </ng-template>
-        </tbody>
-      </table>
-    </div>
-  </section>
-</div>
+        </ng-container>
+    </tbody>
+</nz-table>
