--- a/ui/dashboard/src/app/@routes/templates/templates.html
+++ b/ui/dashboard/src/app/@routes/templates/templates.html
@@ -1,52 +1,16 @@
-<div class="main">
-  <header>
-    <h1>Templates</h1>
-  </header>
-  <section>
-    <div class="table-responsive table-striped table-condensed">
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col" width="40px"></th>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-            <th scope="col"></th>
-          </tr>
-        </thead>
-        <tbody>
-
-          <ng-template ngFor let-template [ngForOf]="templates">
-            <tr (click)="display[template.name] = !display[template.name];">
-              <td>
-                <span *ngIf="!display[template.name];"><span class="fas fa-caret-down"></span></span>
-                <span *ngIf="display[template.name];"><span class="fas fa-caret-up"></span></span>
-              </td>
-              <th scope="row" class="nowrap" style="max-width: 20vw;">
-                {{template.name}}
-              </th>
-              <td class="nowrap" style="max-width: 30vw;">
-                {{template.description}}
-              </td>
-              <td>
-                <span class="badge badge-success" *ngIf="template.auto_runnable">Auto runnable</span>
-                <span class="badge badge-warning" *ngIf="template.allow_all_resolver_usernames">Allow all resolver
-                  usernames</span>
-                <span class="badge badge-danger" *ngIf="template.blocked">Blocked</span>
-                <span class="badge badge-warning" *ngIf="template.hidden">Hidden</span>
-              </td>
-            </tr>
-            <tr *ngIf="display[template.name]">
-              <td>
-
-              </td>
-              <td colspan="3">
-                <app-template-details [templateName]="template.name"></app-template-details>
-              </td>
-            </tr>
-          </ng-template>
-
-        </tbody>
-      </table>
-    </div>
-  </section>
-</div>
+<nz-table #virtualTable [nzData]="templates" [nzFrontPagination]="false" [nzShowPagination]="false" nzSize="small" [nsAutoHeightTable]>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Description</th>
+      <th nzWidth="130px"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let item of virtualTable.data">
+      <td>{{item.name}}</td>
+      <td nzEllipsis title="{{item.description}}">{{item.description}}</td>
+      <td><a nz-button nzType="link" [routerLink]="'/template/'+item.name">View details</a></td>
+    </tr>
+  </tbody>
+</nz-table>
