refactor(ui): fix scrolling page templates and functions

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/template-details/template-details.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/template-details/template-details.sass
@@ -1,4 +1,10 @@
 :host
-  display: block
+  display: flex
+  flex-direction: row
   overflow: hidden
   height: 100%
+
+  lib-utask-editor
+    flex: 1
+  lib-utask-steps-viewer
+    flex: 2
