--- a/ui/dashboard/src/app/@routes/functions/functions.html
+++ b/ui/dashboard/src/app/@routes/functions/functions.html
@@ -1,23 +1,24 @@
-<div class="content">
-    <nz-table #virtualTable [nzData]="functions" [nzFrontPagination]="false" [nzShowPagination]="false" nzSize="small" [nsAutoHeightTable]>
-        <thead>
+<nz-table #virtualTable [nsAutoHeightTable]="39" [nzData]="functions" [nzVirtualItemSize]="1"
+    [nzFrontPagination]="false" [nzShowPagination]="false" nzSize="small">
+    <thead>
+        <tr>
+            <th nzWidth="60px"></th>
+            <th>Name</th>
+        </tr>
+    </thead>
+    <tbody>
+        <ng-container *ngFor="let item of virtualTable.data; let index = index;">
             <tr>
-                <th nzWidth="60px"></th>
-                <th>Name</th>
+                <td [nzExpand]="expandSet.has(item.name)" (nzExpandChange)="onExpandChange(item.name, $event)"></td>
+                <td>{{item.name}}</td>
             </tr>
-        </thead>
-        <tbody>
-            <ng-container *ngFor="let item of virtualTable.data; let index = index;">
-                <tr>
-                    <td [nzExpand]="expandSet.has(item.name)" (nzExpandChange)="onExpandChange(item.name, $event)"></td>
-                    <td>{{item.name}}</td>
-                </tr>
-                <tr *ngIf="expandSet.has(item.name)">
-                    <td colspan="2">
-                        <nz-code-editor class="editor" [ngModel]="codes[index]" [nzEditorOption]="{ language: 'json', readOnly: true }" *ngIf="expandSet.has(item.name)"></nz-code-editor>
-                    </td>
-                </tr>
-            </ng-container>
-        </tbody>
-    </nz-table>
-</div>
+            <tr *ngIf="expandSet.has(item.name)">
+                <td colspan="2">
+                    <nz-code-editor class="editor" [ngModel]="codes[index]"
+                        [nzEditorOption]="{ language: 'json', readOnly: true }" *ngIf="expandSet.has(item.name)">
+                    </nz-code-editor>
+                </td>
+            </tr>
+        </ng-container>
+    </tbody>
+</nz-table>
