--- a/ui/dashboard/src/app/@routes/templates/templates.html
+++ b/ui/dashboard/src/app/@routes/templates/templates.html
@@ -1,4 +1,5 @@
-<nz-table #virtualTable [nzData]="templates" [nzFrontPagination]="false" [nzShowPagination]="false" nzSize="small" [nsAutoHeightTable]>
+<nz-table #virtualTable [nsAutoHeightTable]="39" [nzData]="templates" [nzVirtualItemSize]="1"
+  [nzFrontPagination]="false" [nzShowPagination]="false" nzSize="small">
   <thead>
     <tr>
       <th>Name</th>
