--- a/ui/dashboard/src/styles.sass
+++ b/ui/dashboard/src/styles.sass
@@ -191,7 +191,7 @@
 .node:focus
   outline: unset
 
-utask-steps-viewer
+lib-utask-steps-viewer
     g.edgePath > path
       fill: transparent
       stroke: black
