--- a/ui/dashboard/projects/utask-lib/src/lib/@components/steps-viewer/steps-viewer.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/steps-viewer/steps-viewer.sass
@@ -1,5 +1,15 @@
+:host
+    display: block
+    width: 100%
+    height: 100%
+    position: relative
+
 svg
     width: 100%
+    height: 100%
     display: block
-    background: white
-    border: 2px solid #CCC
+
+button
+    position: absolute
+    right: 20px
+    bottom: 20px
