--- a/ui/dashboard/src/app/@routes/functions/functions.sass
+++ b/ui/dashboard/src/app/@routes/functions/functions.sass
@@ -1,14 +1,7 @@
 :host
+  display: block
   height: 100%
-  display: flex
-  flex-direction: column
-
-.content
-  flex: 1
-  width: 100%
-
-nz-table
-  width: 100%
+  overflow: hidden
 
 .editor
   height: 200px
