--- a/ui/dashboard/src/app/@routes/templates/templates.sass
+++ b/ui/dashboard/src/app/@routes/templates/templates.sass
@@ -1,8 +1,4 @@
 :host
+  display: block
   height: 100%
-  display: flex
-  flex-direction: column
-
-nz-table
-  flex: 1
-  width: 100%
+  overflow: hidden
