--- a/ui/dashboard/src/app/@routes/base/base.html
+++ b/ui/dashboard/src/app/@routes/base/base.html
@@ -9,11 +9,16 @@
 			<li nz-menu-item nzMatchRouter routerLink="/functions">Functions</li>
 			<li nz-menu-item nzMatchRouter routerLink="/stats">Stats</li>
 		</ul>
+		<nz-button-group>
+			<button nz-button nzType="primary" routerLink="/new"><i nz-icon nzType="plus"></i> New task</button>
+		</nz-button-group>
 		<nz-switch [ngModel]="darkThemeActive" (ngModelChange)="switchDarkTheme($event)" nzCheckedChildren="☾"
 			nzUnCheckedChildren="☾"></nz-switch>
 		<nz-badge [nzCount]="iconTemplate" [nzShowZero]="true" style="margin-right: 24px;">
-			<nz-avatar [nzText]="meta?.username[0].toUpperCase()" title="{{meta?.username}}" [nzShape]="'square'"></nz-avatar>
+			<nz-avatar [nzText]="meta?.username[0].toUpperCase()" [nzShape]="'square'" nzTooltipTitle="{{meta?.username}}"
+				nzTooltipPlacement="bottomRight" nz-tooltip></nz-avatar>
 		</nz-badge>
+
 		<ng-template #iconTemplate>
 			<i *ngIf="meta?.user_is_admin" nz-icon nzType="crown" class="ant-scroll-number-custom-component crown-badge"></i>
 		</ng-template>
