--- a/ui/dashboard/src/app/@routes/new/new.html
+++ b/ui/dashboard/src/app/@routes/new/new.html
@@ -1,164 +1,88 @@
-<div>
-  <div class="main" *ngIf="!loaders.templates && !errors.templates">
-    <header>
-      <h1>New task</h1>
-    </header>
-    <section>
+<form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="template">Template</nz-form-label>
+    <nz-form-control class="template-input" [nzSm]="14" [nzXs]="24" nzErrorTip="Please select a template!"
+      [nzExtra]="templateInfo">
+      <nz-select formControlName="template" id="template" (ngModelChange)="templateChange($event)">
+        <ng-template ngFor let-template [ngForOf]="templates">
+          <nz-option [nzDisabled]="template.blocked" [nzValue]="template" [nzLabel]="template.description">
+          </nz-option>
+        </ng-template>
+      </nz-select>
+      <ng-template #templateInfo>
+        <ng-container *ngIf="selectedTemplate">
+          <nz-alert *ngIf="selectedTemplate.long_description || selectedTemplate.doc_link" nzType="info"
+            [nzMessage]="templateInfoMessage" nzShowIcon></nz-alert>
+          <ng-template #templateInfoMessage>
+            <p *ngIf="selectedTemplate.long_description" style="white-space: pre-line;">
+              {{selectedTemplate.long_description}}
+              <ng-container *ngIf="selectedTemplate.doc_link">
+                <br /><a href="{{selectedTemplate.doc_link}}" target="_blank">{{selectedTemplate.doc_link}}</a>
+              </ng-container>
+            </p>
+          </ng-template>
+        </ng-container>
+      </ng-template>
+    </nz-form-control>
+  </nz-form-item>
 
-      <form novalidate #myForm="ngForm" (ngSubmit)="submit()">
-        <!-- <ul>
-              <li *ngFor="let inputName of Object.keys(myForm.form.controls)">{{inputName}} : {{myForm.form.controls[inputName]?.invalid}} {{myForm.form.controls[inputName]?.touched}}
-              </li>
-            </ul> -->
-        <div class="form-group">
-          <label for="input_templates">Templates</label>
-          <select class="form-control" id="input_templates" [autofocus]="true" name="input_templates" required
-            [(ngModel)]="selectedTemplate" (change)="newTask(selectedTemplate);saveFormInQueryParams()">
-            <option *ngIf="!selectedTemplate">-- Template --</option>
-            <ng-template ngFor let-template [ngForOf]="templates">
-              <option *ngIf="!template.blocked" [ngValue]="template">{{template.description}}</option>
-            </ng-template>
+  <ng-container *ngIf="selectedTemplate">
+    <nz-form-item *ngFor="let input of selectedTemplate.inputs">
+      <nz-form-label *ngIf="input.regex" [nzSm]="6" [nzXs]="24" nzFor="input_{{input.name}}"
+        [nzRequired]="!input.optional" [nzTooltipTitle]="input.regex" nzTooltipIcon="info-circle">
+        {{input.name}}
+      </nz-form-label>
+      <nz-form-label *ngIf="!input.regex" [nzSm]="6" [nzXs]="24" nzFor="input_{{input.name}}"
+        [nzRequired]="!input.optional">
+        {{input.name}}
+      </nz-form-label>
+      <nz-form-control [nzExtra]="input.description" [nzSm]="14" [nzXs]="24"
+        nzErrorTip="Please set a valid value for {{input.name}}!">
+        <!-- Input text(regex), number, password -->
+        <ng-container *ngIf="!input.legal_values && input.type!='bool' && !input.collection">
+          <input type="number" formControlName="input_{{input.name}}" nz-input *ngIf="input.type=='number'"
+            placeholder="{{input.default}}">
+          <input type="password" formControlName="input_{{input.name}}" nz-input *ngIf="input.type=='password'">
+          <input type="text" formControlName="input_{{input.name}}" nz-input
+            *ngIf="input.type!='number' && input.type!='password'" [pattern]="input.regex">
+        </ng-container>
+        <!-- Input multiple with strict values -->
+        <nz-select formControlName="input_{{input.name}}" *ngIf="input.legal_values && input.collection"
+          nzMode="multiple" nzPlaceHolder="Please select">
+          <nz-option *ngFor="let item of input.legal_values" [nzLabel]="item" [nzValue]="item"></nz-option>
+        </nz-select>
+        <!-- Input multiple with free values -->
+        <nz-select formControlName="input_{{input.name}}" *ngIf="!input.legal_values && input.collection" nzMode="tags"
+          nzPlaceHolder="Please add a value">
+        </nz-select>
+        <!-- Input simple with strict values -->
+        <nz-select formControlName="input_{{input.name}}" *ngIf="input.legal_values && !input.collection"
+          nzPlaceHolder="Please select">
+          <nz-option *ngFor="let item of input.legal_values" [nzLabel]="item" [nzValue]="item"></nz-option>
+        </nz-select>
+        <!-- Input boolean -->
+        <label formControlName="input_{{input.name}}" *ngIf="input.type=='bool'" nz-checkbox></label>
+      </nz-form-control>
+    </nz-form-item>
+  </ng-container>
 
-          </select>
-        </div>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="watchers">
+      Watchers
+    </nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please set a valid value for watchers!">
+      <nz-select formControlName="watchers" nzMode="tags" nzPlaceHolder="Usernames">
+      </nz-select>
+    </nz-form-control>
+  </nz-form-item>
 
-        <div *ngIf="selectedTemplate && (selectedTemplate.doc_link || selectedTemplate.long_description)"
-          class="highlight">
-          <div *ngIf="selectedTemplate.doc_link">
-            <a href="{{selectedTemplate.doc_link}}" target="_blank">
-              {{selectedTemplate.doc_link}}
-            </a>
-          </div>
-          <p style="white-space: pre-line;">{{selectedTemplate.long_description}}</p>
-        </div>
+  <nz-form-item nz-row class="register-area">
+    <nz-form-control [nzSpan]="14" [nzOffset]="6">
+      <button nz-button nzType="primary">Submit</button>
+    </nz-form-control>
+  </nz-form-item>
+</form>
 
-        <div *ngIf="selectedTemplate">
-          <div *ngFor="let input of selectedTemplate.inputs">
-
-            <!-- INPUT TYPE TEXT(regex) / NUMBER / PASSWORD / TEXTAREA-->
-            <div class="form-group" *ngIf="!input.legal_values && input.type!='bool' && !input.collection"
-              [ngClass]="{'input__required': !input.optional}">
-              <label for="input_{{input.name}}">
-                {{input.description || input.name}}
-                <i class="fas fa-question-circle" *ngIf="input.regex" title="{{input.regex}}"></i>
-                <button type="button" class="btn btn-secondary" *ngIf="input.type!='number'"
-                  title="{{textarea[input.name] ? 'Click to disable multi line' : 'Click to enable multi line'}}" (click)="textarea[input.name] = !textarea[input.name]">
-                  <span *ngIf="textarea[input.name]">
-                    <i class="fas fa-ban"
-                      style="color: Tomato;position: absolute;margin-left: -3px;font-size: 21px;"></i>
-                  </span>
-                  <span>
-                    <i class="fas fa-align-justify fa-1x"></i></span>
-                </button>
-              </label>
-
-              <input type="number" [(ngModel)]="item.input[input.name]" (change)="saveFormInQueryParams()"
-                *ngIf="input.type=='number'" [required]="!input.optional" name="input_{{input.name}}"
-                id="input_{{input.name}}" placeholder="{{input.default}}" class="form-control"
-                [ngClass]="{'is-invalid': myForm.form.controls['input_'+input.name]?.invalid && myForm.form.controls['input_'+input.name]?.touched}">
-
-              <input type="password" [(ngModel)]="item.input[input.name]" *ngIf="input.type=='password' && !textarea[input.name]"
-                [required]="!input.optional" name="input_{{input.name}}" id="input_{{input.name}}" class="form-control"
-                [ngClass]="{'is-invalid': myForm.form.controls['input_'+input.name]?.invalid && myForm.form.controls['input_'+input.name]?.touched}">
-
-              <input type="text" [(ngModel)]="item.input[input.name]" (change)="saveFormInQueryParams()"
-                *ngIf="input.type!='number' && input.type!='password' && !textarea[input.name]"
-                [required]="!input.optional" name="input_{{input.name}}" [pattern]="input.regex"
-                id="input_{{input.name}}" class="form-control"
-                [ngClass]="{'is-invalid': myForm.form.controls['input_'+input.name]?.invalid && myForm.form.controls['input_'+input.name]?.touched}">
-
-              <textarea [(ngModel)]="item.input[input.name]" (change)="saveFormInQueryParams()"
-                *ngIf="input.type!='number' && textarea[input.name]"
-                [required]="!input.optional" name="input_{{input.name}}" [pattern]="input.regex"
-                id="input_{{input.name}}" class="form-control"
-                [ngClass]="{'is-invalid': myForm.form.controls['input_'+input.name]?.invalid && myForm.form.controls['input_'+input.name]?.touched}"></textarea>
-            </div>
-
-            <!-- <label for="input_{{input.name}}">
-                    {{input.description || input.name}}
-                    <i class="fas fa-question-circle" *ngIf="input.regex" title="{{input.regex}}"></i>
-                  </label>
-      
-                  <input type="number" [(ngModel)]="item.input[input.name]" *ngIf="input.type=='number'"
-                    [required]="!input.optional" name="input_{{input.name}}" id="input_{{input.name}}"
-                    placeholder="{{input.default}}" class="form-control"
-                    [ngClass]="{'is-invalid': myForm.form.controls['input_'+input.name]?.invalid && myForm.form.controls['input_'+input.name]?.touched}"> -->
-
-            <div *ngIf="input.legal_values && input.collection" class="form-group"
-              [ngClass]="{'input__required': !input.optional}">
-              <label for="input_{{input.name}}">
-                {{input.description || input.name}}
-              </label>
-
-              <tag-input name="input_{{input.name}}" id="input_{{input.name}}" [(ngModel)]='item.input[input.name]'
-                [modelAsStrings]="true" [onlyFromAutocomplete]="true" [required]="!input.optional"
-                [secondaryPlaceholder]="'Items'" [placeholder]="'Add'" (onBlur)="saveFormInQueryParams()">
-                <tag-input-dropdown [showDropdownIfEmpty]="true" [autocompleteItems]="input.legal_values">
-                </tag-input-dropdown>
-              </tag-input>
-            </div>
-
-            <div *ngIf="!input.legal_values && input.collection" class="form-group"
-              [ngClass]="{'input__required': !input.optional}">
-              <label for="input_{{input.name}}">
-                {{input.description || input.name}}
-              </label>
-
-              <tag-input name="input_{{input.name}}" id="input_{{input.name}}" [(ngModel)]='item.input[input.name]'
-                [modelAsStrings]="true" [required]="!input.optional" [secondaryPlaceholder]="'Items'"
-                [placeholder]="'Add'" (onBlur)="saveFormInQueryParams()">
-              </tag-input>
-            </div>
-
-            <div *ngIf="input.legal_values && !input.collection" class="form-group"
-              [ngClass]="{'input__required': !input.optional}">
-              <label for="input_{{input.name}}">
-                {{input.description || input.name}}
-              </label>
-
-              <select name="input_{{input.name}}" id="input_{{input.name}}" class="form-control"
-                [(ngModel)]='item.input[input.name]' [required]="!input.optional" (change)="saveFormInQueryParams()">
-                <option></option>
-                <option *ngFor="let option of input.legal_values" value="{{option}}">{{option}}</option>
-              </select>
-            </div>
-
-            <div *ngIf="input.type=='bool'" class="form-group">
-              <input type="checkbox" name="input_{{input.name}}" id="input_{{input.name}}"
-                [(ngModel)]='item.input[input.name]' (change)="saveFormInQueryParams()"
-                style="float: left;margin-top: 5px;width: 30px;" />
-              <label for="input_{{input.name}}" style="float: right;width: calc(100% - 30px);">
-                {{input.description || input.name}}
-              </label>
-              <br clear="all" />
-            </div>
-          </div>
-        </div>
-
-
-        <div *ngIf="!display.addWatchers">
-          <button type="button" class="btn btn-link"
-            (click)="display.addWatchers = !display.addWatchers;$event.stopPropagation();">
-            <small>Add watchers</small>
-          </button>
-        </div>
-
-        <div class="form-group" *ngIf="display.addWatchers">
-          <label for="input_watcher_usernames">Watcher usernames</label>
-
-          <tag-input id="input_watcher_usernames" name="input_watcher_usernames" [(ngModel)]='item.watcher_usernames'
-            [modelAsStrings]="true" [secondaryPlaceholder]="'Usernames'" [placeholder]="'Add username'">
-          </tag-input>
-        </div>
-
-        <lib-utask-error-message [data]="errors.submit" *ngIf="errors.submit"></lib-utask-error-message>
-
-        <button type="submit" class="btn btn-success float-right" [disabled]="myForm.invalid">Submit</button>
-      </form>
-    </section>
-  </div>
-
-  <utask-loader *ngIf="loaders.templates"></utask-loader>
-
-  <lib-utask-error-message [data]="errors.templates" *ngIf="errors.templates"></lib-utask-error-message>
-</div>
+<lib-utask-error-message [data]="errors.submit" *ngIf="errors.submit"></lib-utask-error-message>
+<utask-loader *ngIf="loaders.templates"></utask-loader>
+<lib-utask-error-message [data]="errors.templates" *ngIf="errors.templates"></lib-utask-error-message>
