refactor(ui): wip task page

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/box/box.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/box/box.sass
@@ -1,4 +1,22 @@
-@import "../../../styles/colors"
+$color-danger: #dc3545
+$color-warning: #fd7e14
+$color-success: #28a745
+$color-primary: #007bff
+$color-info: #5578eb
+$color-secondary: #fff
+$color-dark: #232946
+$color-light: #fffffe
+$color-white: #fffffe
+$color-text-dark: #24292e
+
+$bloc-primary: $color-dark
+$bloc-secondary: #434966
+$bloc-tercery: #636986
+
+:host
+    display: block
+    margin-top: 15px
+
 .box
     margin-bottom: 8px
     border: 1px solid $color-dark
@@ -19,8 +37,8 @@
             cursor: pointer
 
     content
-        padding: 4px 12px
-        display: block
+            padding: 4px 12px
+            display: block
 .box.primary
     border-color: $bloc-primary
     header
