--- a/ui/dashboard/src/app/@routes/task/task.sass
+++ b/ui/dashboard/src/app/@routes/task/task.sass
@@ -1,17 +1,29 @@
 @import "~src/styles/colors.sass"
 
-header
-    .title
-        float: left
-        width: calc(100% - 300px)
-    .actions
-        float: right
-        width: 300px
-        text-align: right
-        [type="checkbox"]
-            pointer-events: none
+:host
+  display: flex
+  flex-direction: column
+  height: 100%
+  overflow-y: auto
+
+lib-utask-box
+  [app-box-header]
+    nz-button-group
+      float: right
+
+.header
+  display: flex
+  flex-direction: row
+  .title
+    flex: 1
+  .actions
+    nz-switch
+      margin-left: 5px
+    nz-button-group
+      margin-left: 20px
+
 .steps-viewer
-    overflow: auto
+  overflow: auto
 
 .utask_comments
   padding: 0
@@ -36,7 +48,7 @@ header
   color: $color-text
   background: #F0F0F0
   border-radius: 4px
-  
+
 .task_state
   &_WONTFIX,
   &_CANCELLED
