ui: template editor

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/template-details/template-details.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/template-details/template-details.sass
@@ -4,7 +4,11 @@
   overflow: hidden
   height: 100%
 
-  lib-utask-editor
-    flex: 1
+  nz-code-editor
+    flex: 5
   lib-utask-steps-viewer
-    flex: 2
+    flex: 7
+
+::ng-deep
+  lib-utask-steps-viewer .step-default
+    background: #333 !important
