--- a/ui/dashboard/src/app/@routes/task/task.html
+++ b/ui/dashboard/src/app/@routes/task/task.html
@@ -88,9 +88,7 @@
       Execution -
       <small>{{resolution.id}}</small> -
       <small class="bloc_status resolution_state_{{resolution.state}}">{{resolution.state}}</small>
-
       <span *ngIf="loaders.execution || loaders.task">&nbsp;<i class="fas fa-spinner fa-spin"></i></span>
-
       <nz-button-group nzSize="small">
         <button nz-button nzType="primary" title="Run" (click)="runResolution(resolution)"><i nz-icon
             nzType="caret-right"></i></button>
@@ -131,16 +129,13 @@
       <div class="row">
         <span class="col-3">Last start</span>
         <strong class="col-9">{{resolution.last_start | date: 'yyyy/MM/dd HH:mm'}}</strong>
-
         <span class="col-3">Last stop</span>
         <strong class="col-9">{{resolution.last_stop | date: 'yyyy/MM/dd HH:mm'}}</strong>
-
         <span class="col-3">Run count</span>
         <strong class="col-9">{{resolution.run_count}} / {{resolution.run_max}}</strong>
       </div>
     </div>
   </lib-utask-box>
-
 
   <div class="row" *ngIf="taskIsResolvable">
     <div class="col-md-6">
@@ -149,107 +144,22 @@
           Resolve this task
         </div>
         <div app-box-content>
-          <form novalidate #myForm="ngForm" (ngSubmit)="resolveTask()">
-            <div *ngFor="let input of template.resolver_inputs">
-
-              <!-- INPUT TYPE TEXT(regex) / NUMBER / PASSWORD / TEXTAREA-->
-              <div class="form-group" *ngIf="!input.legal_values && input.type!='bool' && !input.collection"
-                [ngClass]="{'input__required': !input.optional}">
-                <label for="input_{{input.name}}">
-                  {{input.description || input.name}}
-                  <i class="fas fa-question-circle" *ngIf="input.regex" title="{{input.regex}}"></i>
-                  <button type="button" class="btn btn-secondary" *ngIf="input.type!='number'"
-                    title="{{textarea[input.name] ? 'Click to disable multi line' : 'Click to enable multi line'}}"
-                    (click)="textarea[input.name] = !textarea[input.name]">
-                    <span *ngIf="textarea[input.name]">
-                      <i class="fas fa-ban"
-                        style="color: Tomato;position: absolute;margin-left: -3px;font-size: 21px;"></i>
-                    </span>
-                    <span>
-                      <i class="fas fa-align-justify fa-1x"></i></span>
-                  </button>
-                </label>
-
-                <input type="number" [(ngModel)]="item.resolver_inputs[input.name]" *ngIf="input.type=='number'"
-                  [required]="!input.optional" name="input_{{input.name}}" id="input_{{input.name}}"
-                  placeholder="{{input.default}}" class="form-control"
-                  [ngClass]="{'is-invalid': myForm.form.controls['input_'+input.name]?.invalid && myForm.form.controls['input_'+input.name]?.touched}">
-
-                <input type="password" [(ngModel)]="item.resolver_inputs[input.name]"
-                  *ngIf="input.type=='password' && !textarea[input.name]" [required]="!input.optional"
-                  name="input_{{input.name}}" id="input_{{input.name}}" class="form-control"
-                  [ngClass]="{'is-invalid': myForm.form.controls['input_'+input.name]?.invalid && myForm.form.controls['input_'+input.name]?.touched}">
-
-                <input type="text" [(ngModel)]="item.resolver_inputs[input.name]"
-                  *ngIf="input.type!='number' && input.type!='password' && !textarea[input.name]"
-                  [required]="!input.optional" name="input_{{input.name}}" [pattern]="input.regex"
-                  id="input_{{input.name}}" class="form-control"
-                  [ngClass]="{'is-invalid': myForm.form.controls['input_'+input.name]?.invalid && myForm.form.controls['input_'+input.name]?.touched}">
-
-                <textarea [(ngModel)]="item.resolver_inputs[input.name]"
-                  *ngIf="input.type!='number' && textarea[input.name]" [required]="!input.optional"
-                  name="input_{{input.name}}" [pattern]="input.regex" id="input_{{input.name}}" class="form-control"
-                  [ngClass]="{'is-invalid': myForm.form.controls['input_'+input.name]?.invalid && myForm.form.controls['input_'+input.name]?.touched}"></textarea>
-              </div>
-
-              <div *ngIf="input.legal_values && input.collection" class="form-group">
-                <label for="input_{{input.name}}">
-                  {{input.description || input.name}}
-                </label>
-
-                <tag-input name="input_{{input.name}}" id="input_{{input.name}}"
-                  [(ngModel)]='item.resolver_inputs[input.name]' [modelAsStrings]="true" [onlyFromAutocomplete]="true"
-                  [required]="!input.optional" [secondaryPlaceholder]="'Items'" [placeholder]="'Add'">
-                  <tag-input-dropdown [showDropdownIfEmpty]="true" [autocompleteItems]="input.legal_values">
-                  </tag-input-dropdown>
-                </tag-input>
-              </div>
-
-              <div *ngIf="!input.legal_values && input.collection" class="form-group">
-                <label for="input_{{input.name}}">
-                  {{input.description || input.name}}
-                </label>
-
-                <tag-input name="input_{{input.name}}" id="input_{{input.name}}"
-                  [(ngModel)]='item.resolver_inputs[input.name]' [modelAsStrings]="true" [required]="!input.optional"
-                  [secondaryPlaceholder]="'Items'" [placeholder]="'Add'">
-                </tag-input>
-              </div>
-
-              <div *ngIf="input.legal_values && !input.collection" class="form-group">
-                <label for="input_{{input.name}}">
-                  {{input.description || input.name}}
-                </label>
-
-                <select name="input_{{input.name}}" id="input_{{input.name}}" class="form-control"
-                  [(ngModel)]='item.resolver_inputs[input.name]' [required]="!input.optional">
-                  <option></option>
-                  <option *ngFor="let option of input.legal_values" value="{{option}}">{{option}}</option>
-                </select>
-              </div>
-
-              <div *ngIf="input.type=='bool'" class="form-group">
-                <label for="input_{{input.name}}">
-                  {{input.description || input.name}}
-                </label>
-
-                <input type="checkbox" name="input_{{input.name}}" id="input_{{input.name}}"
-                  [(ngModel)]='item.resolver_inputs[input.name]' />
-              </div>
-            </div>
-
-            <lib-utask-error-message [data]="errors.resolveTask" *ngIf="errors.resolveTask">
-            </lib-utask-error-message>
-
-            <button type="submit" class="btn btn-success"
-              [disabled]="myForm.invalid || loaders.resolveTask">Resolve</button>
+          <lib-utask-inputs-form *ngIf="template" [formGroup]="validateForm" [inputs]="template.resolver_inputs">
+          </lib-utask-inputs-form>
+          <form nz-form [formGroup]="validateForm" (ngSubmit)="resolveTask()">
+            <nz-form-item nz-row class="register-area">
+              <nz-form-control [nzSpan]="14" [nzOffset]="6">
+                <button nz-button nzType="primary" [nzLoading]="loaders.resolveTask">Resolve</button>
+              </nz-form-control>
+            </nz-form-item>
           </form>
+          <lib-utask-error-message [data]="errors.resolveTask" *ngIf="errors.resolveTask">
+          </lib-utask-error-message>
         </div>
       </lib-utask-box>
     </div>
 
     <div class="col-md-6">
-
       <lib-utask-box [header]="{openable: true, init: display.resolution, class: 'danger', openOnClick: true}">
         <div app-box-header>
           Reject this task
