--- a/ui/dashboard/src/app/@routes/new/new.html
+++ b/ui/dashboard/src/app/@routes/new/new.html
@@ -41,7 +41,7 @@
 
   <nz-form-item nz-row class="register-area">
     <nz-form-control [nzSpan]="14" [nzOffset]="6">
-      <button nz-button nzType="primary">Submit</button>
+      <button nz-button [disabled]="!validateForm.valid" [nzLoading]="loaders.submit" nzType="primary">Submit</button>
     </nz-form-control>
   </nz-form-item>
 </form>
