refactor(ui): add logo steps column

--- a/ui/dashboard/src/app/@routes/base/base.html
+++ b/ui/dashboard/src/app/@routes/base/base.html
@@ -1,7 +1,8 @@
 <nz-layout class="app-layout">
 	<nz-header>
 		<div class="logo">
-			{{meta?.application_name}}
+			<img src="./assets/logo.png">
+			<span>{{meta?.application_name}}</span>
 		</div>
 		<ul nz-menu nzTheme="dark" nzMode="horizontal">
 			<li nz-menu-item nzMatchRouter routerLink="/tasks">Tasks</li>
