ui: modals/editor inprogress

--- a/ui/dashboard/projects/utask-lib/src/lib/@modals/modal-confirmation-api/modal-confirmation-api.component.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@modals/modal-confirmation-api/modal-confirmation-api.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <div class="modal-header">
         <h4 class="modal-title" id="modal-basic-title">
             {{title}}
@@ -21,4 +21,4 @@
             {{yes}}
         </button>
     </footer>
-</div>
+</div> -->
