refactor(ui): use box for task step list

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/box/box.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/box/box.sass
@@ -12,6 +12,13 @@ $color-warning: #fd7e14
     ::ng-deep
         .ant-collapse-header
             color: white
+        .ant-collapse-content
+            border: none
+
+.box.custom-color
+    ::ng-deep
+        .ant-collapse-content
+            border: none
 
 .box.success
     border-color: $color-success
