--- a/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.sass
@@ -1,8 +1,4 @@
-.utask_step
-  .utask_step-name
-    color: white
-    padding: 4px 8px
-  .utask_step-details
-    color: #333
-    padding: 4px 8px
-  margin-bottom: 8px
+lib-utask-box
+  [app-box-header]
+    nz-button-group
+      float: right
