refactor(ui): task page wip

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/stepslist/stepslist.sass
@@ -1,4 +1,10 @@
+:host
+  display: block
+
 lib-utask-box
   [app-box-header]
     nz-button-group
       float: right
+
+nz-select
+    width: 100%
