--- a/ui/dashboard/src/app/@routes/task/task.sass
+++ b/ui/dashboard/src/app/@routes/task/task.sass
@@ -14,6 +14,7 @@ lib-utask-box
 .header
   display: flex
   flex-direction: row
+  margin-bottom: 15px
   .title
     flex: 1
   .actions
@@ -43,6 +44,7 @@ lib-utask-box
 
 .bloc_status
   display: inline-block
+  margin-right: 10px
   padding: 2px 8px
   text-align: center
   color: $color-text
@@ -67,5 +69,9 @@ lib-utask-box
     background: $color-primary
     color: white
 
+lib-utask-steps-list
+  margin-bottom: 15px
+
 lib-utask-steps-viewer
-  height: 500px
+  height: 400px
+
